<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/layout_preferences">
	<EditTextPreference android:title="@string/layout_name" android:key="layoutName"></EditTextPreference>
	<PreferenceCategory android:title="@string/layout_button_grid_category">
		<CheckBoxPreference android:title="@string/layout_has_button_grid" android:key="layoutHasButtonGrid" />
		<EditTextPreference android:title="@string/layout_button_grid_height" android:key="layoutButtonGridHeight" android:numeric="integer" android:dependency="layoutHasButtonGrid" />
		<EditTextPreference android:title="@string/layout_button_grid_width" android:key="layoutButtonGridWidth" android:numeric="integer" android:dependency="layoutHasButtonGrid" />
		<com.se.pcremote.android.ui.layout.ButtonGridMapPreference android:title="@string/layout_button_grid_map" android:key="layoutButtonGridMap" android:dependency="layoutHasButtonGrid" />
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/layout_keyboard_category">
        <CheckBoxPreference android:title="@string/layout_has_keyboard_button" android:key="layoutHasKeyboardButton" />
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/layout_mouse_category">
		<CheckBoxPreference android:title="@string/layout_has_mouse_pad" android:key="layoutHasMousePad" />
        <CheckBoxPreference android:title="@string/layout_has_mouse_pad_vertical" android:key="layoutHasMousePadVertical" android:dependency="layoutHasMousePad" />
		<CheckBoxPreference android:title="@string/layout_has_mouse_buttons" android:key="layoutHasMouseButtons" />
	</PreferenceCategory>
</PreferenceScreen>
