<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="mainScreen" android:title="@string/main_preferences">
	<PreferenceCategory android:title="@string/pc_category" android:key="pcCategory" android:order="0">
		<ListPreference android:key="activePc" android:title="@string/active_pc" android:summary="@string/active_pc_summary" android:order="0" />
		<Preference android:key="managePcs" android:summary="@string/manage_pcs_summary" android:title="@string/manage_pcs" android:order="1" />
	</PreferenceCategory>
	<PreferenceCategory android:key="layoutCategory" android:title="@string/layout_category" android:order="1">
		<ListPreference android:title="@string/active_layout" android:key="activeLayout" android:summary="@string/active_layout_summary"
			android:order="0" />
		<Preference android:key="manageLayouts" android:summary="@string/manage_layouts_summary" android:title="@string/manage_layouts"
			android:order="1" />
	</PreferenceCategory>
</PreferenceScreen>
